[package]
name = "invidious2newpipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.11", features = ["derive"] }
opml = "1.1.3"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"

[[bin]]
name = "i2n"
path = "src/main.rs"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
debug = 0
incremental = true
strip = true
